--- a/templates/scss/style_writePost.scss
+++ b/templates/scss/style_writePost.scss
@@ -124,6 +124,10 @@
                 font-weight: 400;
             }
 
+            .categories {
+                
+            }
+
         }
 
     }
