--- a/templates/scss/style_index.scss
+++ b/templates/scss/style_index.scss
@@ -614,6 +614,7 @@ body {
                     }
 
                     .filter_submit {
+                        grid-column: 5;
                         
                         input {
                             display: flex;
