--- a/templates/scss/style_content.scss
+++ b/templates/scss/style_content.scss
@@ -58,6 +58,7 @@ body {
                         border-radius: 18px;
                         margin: 12px;
                         padding: 3px;
+                        display: flow-root;
                         box-shadow: 0px 1px 3px 0px #00000012;
                         
 
