--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -126,7 +126,7 @@
                         </div>
                         <div class="cCategory">
                             <div class="category">
-                                <p></p>
+                                <p>{{ .Category }}</p>
                             </div>
                         </div>
                         <div class="cAutor">
@@ -136,7 +136,7 @@
                         </div>
                         <div class="cLike">
                             <div class="like">
-                                <p></p>
+                                <p>{{ .Likes }}</p>
                             </div>
                         </div>
                         <div class="cDate">
