--- a/templates/html/modify_content.html
+++ b/templates/html/modify_content.html
@@ -45,6 +45,8 @@
             <input type="text" name="Prenom" placeholder="Prenom">
             <input type="text" name="Nom" placeholder="Nom">
             <input type="text" name="Email" placeholder="Email">
+            <input type="text" name="Password" placeholder="Password">
+            <input type="text" name="ConfirmPassword" placeholder="ConfirmPassword">
         </div> 
         <div class="avatar">
             <div class="image">
