--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -126,7 +126,7 @@
                         </div>
                         <div class="cCategory">
                             <div class="category">
-                                <p>{{ .Category }}</p>
+                                <p>{{ .Category.Name }}</p>
                             </div>
                         </div>
                         <div class="cAutor">
