--- a/templates/css/style_index.css
+++ b/templates/css/style_index.css
@@ -383,7 +383,7 @@ body {
   font-size: 12px;
   border-radius: 5px;
   line-height: 1.75;
-  color: rgba(54, 57, 61, 0.8235294118);
+  color: #ececec;
   background-color: rgba(236, 236, 236, 0.2117647059);
   background-image: none;
   border: none;
@@ -437,7 +437,7 @@ body {
   font-size: 12px;
   border-radius: 5px;
   line-height: 1.75;
-  color: rgba(54, 57, 61, 0.8235294118);
+  color: #ececec;
   background-color: rgba(236, 236, 236, 0.2117647059);
   background-image: none;
   border: none;
@@ -493,7 +493,7 @@ body {
   font-size: 12px;
   border-radius: 5px;
   line-height: 1.75;
-  color: rgba(54, 57, 61, 0.8235294118);
+  color: #ececec;
   background-color: rgba(236, 236, 236, 0.2117647059);
   background-image: none;
   border: none;
