--- a/templates/scss/style_index.scss
+++ b/templates/scss/style_index.scss
@@ -447,7 +447,7 @@ body {
                             font-size: 12px;
                             border-radius: 5px;
                             line-height: 1.75;
-                            color: #36393dd2;
+                            color: #ececec;
                             background-color: #ececec36;
                             background-image: none;
                             border: none;
@@ -511,7 +511,7 @@ body {
                             font-size: 12px;
                             border-radius: 5px;
                             line-height: 1.75;
-                            color: #36393dd2;
+                            color: #ececec;
                             background-color: #ececec36;
                             background-image: none;
                             border: none;
@@ -576,7 +576,7 @@ body {
                             font-size: 12px;
                             border-radius: 5px;
                             line-height: 1.75;
-                            color: #36393dd2;
+                            color: #ececec;
                             background-color: #ececec36;
                             background-image: none;
                             border: none;
