--- a/templates/css/style_index.css
+++ b/templates/css/style_index.css
@@ -618,4 +618,10 @@ body {
   overflow-y: scroll;
 }
 
+.cat input {
+  background-color: unset;
+    border: none;
+}
+
+
 /*# sourceMappingURL=style_index.css.map */
