--- a/templates/html/modify_content.html
+++ b/templates/html/modify_content.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="templates/css/style_login.css">
-    <link rel="stylesheet" href="templates/css/style_scrollbar.css">
-    <link rel="stylesheet" href="templates/css/style.css">
-    <link rel="stylesheet" href="templates/css/style_index.css">
-    <link rel="stylesheet" href="templates/css/style_theme.css">
-    <link rel="stylesheet" href="templates/css/style_modify_content.css">
+    <link rel="stylesheet" href="/templates/css/style_login.css">
+    <link rel="stylesheet" href="/templates/css/style_scrollbar.css">
+    <link rel="stylesheet" href="/templates/css/style.css">
+    <link rel="stylesheet" href="/templates/css/style_index.css">
+    <link rel="stylesheet" href="/templates/css/style_theme.css">
+    <link rel="stylesheet" href="/templates/css/style_modify_content.css">
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet">
     <title>Forum</title>
 </head>
@@ -47,7 +47,7 @@
             <input type="text" name="Email" placeholder="Email">
             <input type="text" name="Password" placeholder="Password">
             <input type="text" name="ConfirmPassword" placeholder="ConfirmPassword">
-        </div> 
+        </div>
         <div class="avatar">
             <div class="image">
                 <img src="{{ .User.Avatar }}" alt="">
